fixed forms behind content box

--- a/css/complain_pass.css
+++ b/css/complain_pass.css
@@ -9,6 +9,7 @@ a{
 }
 header{
     position: fixed;
+    z-index: 2;
 }
 
 .title_box{
