--- a/css/gate_pass.css
+++ b/css/gate_pass.css
@@ -1,100 +1,90 @@
-* {
+*{
     margin: 0;
     font-family: 'Times New Roman', Times, serif;
 }
 
-a {
+a{
     text-decoration: none;
     color: black;
 }
-
-header {
+header{
     position: fixed;
+    z-index: 2;
 }
 
-.title_box {
+.title_box{
     width: 100vw;
     height: 13vh;
-    background-color: #D8E2DC;
+    background-color:#D8E2DC;
     display: flex;
     gap: 4%;
 }
-
-.college_logo {
+.college_logo{
     height: 13vh;
 }
-
-.college_name_box {
-    width: 100vw;
+.college_name_box{
+    width:100vw;
     display: flex;
     justify-content: center;
 }
-
-.college_name {
-    font-size: 5.5vh;
+.college_name{
+    font-size:5.5vh ;
     text-align: center;
     width: 80%;
-    min-width: 800px;
+    min-width:800px;
 }
-
-.navbar_box {
+.navbar_box{
     width: 100vw;
-    height: 6vh;
+    height:6vh;
     background-color: white;
 }
-
-.nav_items {
+.nav_items{
     display: flex;
     flex-direction: row;
     height: 80%;
-    padding-top: 1vh;
+    padding-top:1vh;
     gap: 4vw;
 }
-
-.items {
+.items{
     padding-top: 1.5vh;
     text-align: center;
     font-size: 22px;
 }
 
-#home {
+#home{
     padding-left: 2.5vw;
 }
 
-.forms_list {
+.forms_list{
     display: none;
     position: absolute;
     min-height: 15vh;
-    z-index: 2px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    background-color: #cbded2;
+    z-index: 5;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    background-color:#cbded2;
     border-radius: 10px;
 }
-
-#forms:hover .forms_list {
-    display: flex;
+#forms:hover .forms_list{
+    display:flex;
     flex-direction: column;
-    align-items: start;
+    align-items:start;
     gap: 1.5vh;
 }
-
-#forms:hover #gate_pass {
+#forms:hover #gate_pass{
     margin-top: 10%;
 }
-
-.hover_pass:hover {
-    background-color: #e5fdef;
-    width: 100%;
-    text-align: left;
+.hover_pass:hover{
+    background-color:#e5fdef ;
+    width:100%;
+    text-align:left;
     border-radius: 5px;
 }
 
-.bottom_nav_line {
+.bottom_nav_line{
     height: .3px;
     margin-left: 1.5vw;
-    width: 97vw;
+    width:97vw;
 }
-
 .gate_pass_box {
     background-color: #F0F5F5;
     position: absolute;
